--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <link  href="css/960_12_col.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </head>
 <body>
 <div class ="wrap container_12 clearfix">
     <div id="wrapper">
-			<video loop="3" muted poster="vlcsnap-2016-09-17-00h43m28s382.png" style="background-size: cover">
+			<video loop="3" autoplay muted poster="vlcsnap-2016-09-17-00h43m28s382.png" style="background-size: cover">
 				<source src="Float-1.m4v">
 			</video>
     </div>
